Fix spacing on features section

--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ a {
 }
 
 .content-section {
-  padding: 10em 0;
+  padding: 6em 0;
 }
 
 .highlighted-section {
@@ -263,6 +263,10 @@ a {
 .feature-card-grid-pattern {
   right: 0;
   top: 50%;
+}
+
+.feature-card-row {
+  margin-bottom: 80px;
 }
 
 ul.list-check li {
